syntax = "proto3";

package media;

import "google/protobuf/empty.proto";

service Media {
  rpc GetImage (google.protobuf.Empty) returns (MediaResponse);
  rpc GetAudio (google.protobuf.Empty) returns (MediaResponse);
  rpc GetVideo (google.protobuf.Empty) returns (MediaResponse);
}

message MediaResponse {
  bytes data = 1;
  string content_type = 2;
}
